# image-to-pencil-sketch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: API.md  EXAMPLES.md  INSTALLATION.md
samples/input/: .gitkeep
samples/output/: .gitkeep
src/: __init__.py  cli.py  converter.py  gui.py  utils.py
tests/: conftest.py  test_cli.py  test_converter.py  test_utils.py
tests/integration/: test_integration.py
tests/performance/: test_performance.py
